2024-02-29 전역 DLL 인젝션 업데이트 및 SetPrivilege 함수 고침

--- a/DLLInjector/DLLInjector.vcxproj
+++ b/DLLInjector/DLLInjector.vcxproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Injector.hpp" />
+    <ClInclude Include="Privilege.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
