--- a/DLLInjector/DLLInjector.vcxproj.filters
+++ b/DLLInjector/DLLInjector.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Injector.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Privilege.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
